--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,37 @@
+body {
+  background: rgb(0, 79, 0);
+  color: white;
+}
+
 .main-headline {
+  font-size: 36px;
   text-align: center;
 }
 
+.endpoint-title {
+  font-size: 28px;
+}
+
+
 .charging-station-article,
 .cafe-article {
-  border: 2px solid black;
+  background: rgb(60, 60, 60);
+  border: 4px solid white;
   margin: 20px;
-  padding: 10px;
+  padding: 20px;
 }
 
 .charging-station-title,
 .cafe-title {
+  font-size: 32px;
   text-align: center;
+}
+
+pre,
+.url {
+  background: rgb(133, 133, 133);
+}
+
+.url {
+  padding: 10px 100px;
 }
