--- a/public/styles.css
+++ b/public/styles.css
@@ -4,17 +4,15 @@ body {
 }
 
 .main-headline {
-  font-size: 36px;
+  font-size: 2.25rem;
   text-align: center;
 }
 
 .endpoint-title {
-  font-size: 28px;
+  font-size: 1.75rem;
 }
 
-
-.charging-station-article,
-.cafe-article {
+article {
   background: rgb(60, 60, 60);
   border: 4px solid white;
   margin: 20px;
@@ -23,7 +21,7 @@ body {
 
 .charging-station-title,
 .cafe-title {
-  font-size: 32px;
+  font-size: 2rem;
   text-align: center;
 }
 
