--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 body {
   background: rgb(0, 79, 0);
   color: white;
+  font-family: 'avenir';  
 }
 
 .main-headline {
@@ -17,6 +18,7 @@ article {
   border: 4px solid white;
   margin: 20px;
   padding: 20px;
+  border-radius: 5px;
 }
 
 .charging-station-title,
