Add pre-wrap to pre element in html

--- a/public/styles.css
+++ b/public/styles.css
@@ -21,10 +21,22 @@ article {
   border-radius: 5px;
 }
 
+.instructions {
+
+}
+
+code {
+
+}
+
 .charging-station-title,
 .cafe-title {
   font-size: 2rem;
   text-align: center;
+}
+
+pre {
+  white-space: pre-wrap;
 }
 
 pre,
