--- a/public/styles.css
+++ b/public/styles.css
@@ -1,16 +1,41 @@
 body {
   background-color: #edefed;
-  /*color: white;*/
   font-family: 'avenir';  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-/*.charging-station {
-  background-color: #FFF;
-}*/
 
 .main-headline {
   font-size: 2.25rem;
   text-align: center;
+}
+
+.icon-header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 20rem;
+  height: 4rem;
+}
+
+.bolt-car {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 6rem;
+}
+
+.fa-bolt {
+  font-size: 2.25rem;
+}
+
+.fa-car {
+  font-size: 4rem;  
+}
+
+.fa-mug-hot {
+  font-size: 4rem;
 }
 
 .endpoint-title {
@@ -18,7 +43,6 @@ body {
 }
 
 article {
-  /*background: rgb(60, 60, 60);*/
   background-color: #FFF;
   border: 4px solid #ff9800;
   margin: 20px;
