--- a/public/styles.css
+++ b/public/styles.css
@@ -28,14 +28,15 @@ body {
 
 .fa-bolt {
   font-size: 2.25rem;
+  color: yellow;
 }
 
 .fa-car {
   font-size: 4rem;  
 }
 
-.fa-mug-hot {
-  font-size: 4rem;
+.fa-coffee {
+  font-size: 3rem;
 }
 
 .endpoint-title {
